--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -10,16 +10,17 @@ jobs:
     name: Building
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout
+      - uses: actions/checkout@v2
       - uses: oven-sh/setup-bun@v2
       - run: cd ${{ github.workspace }}
-      # Dependecy installation
+      # Dependency installation
       - run: bun install
       - run: bun run build
       - run: bun run build-win
       # universal :D (not tested)
       - run: bun run build_standalone
       - uses: actions/upload-artifact@v4.4.3
-      with: 
-        name: executables
-        path: ${{github.workspace}}/build
+        with: 
+          name: executables
+          path: ${{ github.workspace }}/build
+
