--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -18,7 +18,7 @@ jobs:
       - run: bun run build
       - run: bun run build-win
       # universal :D (not tested)
-      - run: bun run build_standalone
+      - run: bun run build-standlone
       - uses: actions/upload-artifact@v4.4.3
         with: 
           name: executables
